# paystack-rust

./: Cargo.toml  README.md
src/: .env.sample  main.rs  transaction.rs
src/example/: add_key.rs  charge.rs  initialize.rs  verify.rs
