[package]
name = "paystack"
version = "0.1.0"
authors = ["Emmanuel Adebayo <emmanueltolu.adebayo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.10.7", features = ["blocking", "json"]}
tokio = { version = "0.2", features = ["full"] }
serde_json = "1.0.44"
dotenv = "0.14.1"
